# internal/models/blackListModel.go
@@ -1,0 +1,5 @@
+package models
+
+type BodyIpRequest struct {
+	IP []string `json:"ip"`
+}
